# bioneuro-olfactory-fusion

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.js  ACADEMIC_PUBLICATION_SUMMARY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.multi-stage  Dockerfile.prod  FINAL_IMPLEMENTATION_SUMMARY.md  GENERATION_3_SCALING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MONITORING_GUIDE.md  Makefile  PROJECT_CHARTER.md  QUALITY_GATES_REPORT.md  README.md  RESEARCH_VALIDATION_REPORT.md  ROBUSTNESS_FEATURES_SUMMARY.md  SECURITY.md  TERRAGON_SDLC_COMPLETION_REPORT.md  comprehensive_quality_gates.py  conftest.py  conscious_breakthrough_demo.py  conscious_validation.py  demo_realtime_detection.py  demo_robust_system.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  final_gen3_standalone.py  (+40 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
.terragon/: autonomous_agent.py  config.yaml  monitoring.yaml  value-discovery.py  value-metrics.json
bioneuro_olfactory/: __init__.py  cli.py  cli_demo.py
bioneuro_olfactory/algorithms/: __init__.py  adaptive_threshold.py  pattern_recognition.py
bioneuro_olfactory/api/: __init__.py  dependencies.py  server.py
bioneuro_olfactory/api/routes/: detection.py
bioneuro_olfactory/autonomous/: __init__.py  self_improving_networks.py
bioneuro_olfactory/compliance/: __init__.py  audit_manager.py  global_compliance.py
bioneuro_olfactory/core/: config_manager.py  dependency_manager.py  enhanced_input_validation.py  enhanced_validation.py  error_handling.py  error_handling_enhanced.py  error_handling_neuromorphic.py  health_monitoring.py  health_monitoring_enhanced.py  health_monitoring_simple.py  logging_enhanced.py  logging_simple.py  mock_numpy.py  mock_torch.py  robustness_decorators.py  robustness_enhanced.py  robustness_framework.py  robustness_manager.py  robustness_system.py  validation.py  validation_enhanced.py
bioneuro_olfactory/core/encoding/: spike_encoding.py
bioneuro_olfactory/core/neurons/: lif.py
bioneuro_olfactory/data/: __init__.py
bioneuro_olfactory/data/database/: connection.py  models.py
bioneuro_olfactory/data/database/migrations/: 001_initial_schema.py
bioneuro_olfactory/data/repositories/: base_repository.py  experiment_repository.py
bioneuro_olfactory/features/: __init__.py  advanced_fusion.py
bioneuro_olfactory/global_deployment/: __init__.py  cloud_orchestration.py  edge_integration.py  planetary_monitoring.py
bioneuro_olfactory/i18n/: __init__.py  formatters.py  global_localization.py  regional_standards.py  translation_manager.py
bioneuro_olfactory/integrations/: __init__.py
bioneuro_olfactory/integrations/github/: client.py
bioneuro_olfactory/integrations/notifications/: alert_manager.py
bioneuro_olfactory/models/: __init__.py
bioneuro_olfactory/models/fusion/: __init__.py
bioneuro_olfactory/models/kenyon/: __init__.py
bioneuro_olfactory/models/mushroom_body/: __init__.py
bioneuro_olfactory/models/projection/: __init__.py
bioneuro_olfactory/monitoring/: __init__.py  metrics_collector.py  neuromorphic_monitoring.py
bioneuro_olfactory/optimization/: __init__.py  adaptive_caching.py  advanced_caching.py  advanced_neural_acceleration.py  concurrent_processing.py  distributed_neuromorphic.py  distributed_processing.py  distributed_processing_v2.py  enhanced_monitoring.py  gen3_performance_engine.py  gpu_acceleration.py  intelligent_caching.py  load_balancer.py  neural_acceleration.py  neuromorphic_acceleration.py  neuromorphic_accelerator.py  neuromorphic_cache.py  next_gen_accelerator.py  performance_accelerator.py  performance_cache.py  performance_integration_demo.py  performance_optimizer.py  performance_profiler.py  sensor_connection_pool.py  spike_io.py  spike_pipeline.py  superintelligent_accelerator.py  vectorized_ops.py
bioneuro_olfactory/quality_gates/: production_readiness.py
bioneuro_olfactory/research/: __init__.py  adversarial_robustness.py  bio_plasticity.py  conscious_neuromorphic.py  quantum_neuromorphic.py
bioneuro_olfactory/security/: __init__.py  advanced_security.py  enhanced_security.py  input_validation.py  neuromorphic_security.py  neuromorphic_security_advanced.py  quantum_secured_neuromorphic.py  security_manager.py  vulnerability_scanner.py
bioneuro_olfactory/sensors/audio/: acoustic_processor.py
bioneuro_olfactory/sensors/enose/: sensor_array.py
bioneuro_olfactory/testing/: __init__.py  comprehensive_neuromorphic_tests.py  comprehensive_testing.py  test_framework.py
bioneuro_olfactory/tests/: test_robustness_integration.py
docs/: Makefile  ROADMAP.md  conf.py  index.rst
docs/adr/: 001-neuromorphic-platform-selection.md  template.md
docs/api/: applications.rst  core.rst  models.rst  neuromorphic.rst  sensors.rst
docs/workflows/: README.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: generate_sbom.sh
src/bioneuro/: __init__.py  cnn_cross_section.py  fusion_classifier.py  pipeline.py  sensor_array.py  snn_encoder.py
tests/: __init__.py  conftest.py  test_bioneuro.py
tests/e2e/: test_deployment.py
tests/integration/: test_complete_pipeline.py  test_complete_safety_system.py  test_fusion_pipeline.py  test_robustness_pipeline.py
tests/unit/: test_config_manager.py  test_core_neurons.py  test_lif_neurons.py  test_multimodal_fusion.py  test_sensors.py  test_spike_encoding.py  test_validation.py
